[package]
name = "gameboy"
version = "0.1.0"
authors = ["Kevin Darlington <kevin@outroot.com>"]
build = "build.rs"

[dependencies]
clap = "2.9"
simplelog = "0.1"
log = "0.3"
md5 = "0.1"
difference = "0.4"
rustyline = { git = "https://github.com/kkawakam/rustyline", branch = "master" }
piston_window = "0.51"
image = "0.10"
time = "0.1"
num = "0.1"
num-macros = "0.1"
libc = "0.2"
yaml-rust = "0.3"
rand = "0.3"
bitflags = "0.7"
lalrpop-util = "0.12"
ctrlc = "2.0"

[build-dependencies]
lalrpop = "0.12"

[lib]
name = "gameboy"
path = "src/lib.rs"

[[bin]]
name = "gameboy-emu"
path = "src/main.rs"
